Updating the code to Java 17, the latest stable and compatible version to use Lombok with SpringBoot dependencies.